[Refactor] Removed any use of the java.desktop module inside org.openmarkov.core, including inside edits, and use of java.awt.geom and event listeners from Swing. [Refactor] The interface PNEdit and the abstract class SimpleEdit have been merged into a base class called PNEdit. Every edit in OpenMarkov extends said class, including CompoundPNEdit. [Refactor] Simplified from Sun's UndoManagerSupport to a different class with the same purpose named UndoManager. [Refactor, UX] Removed the limit of undoable edits to 100, now it is unlimited (this is caused by the previous refactor). [Refactor, Exceptions] Edits are now triggered via the method 'executeEdit', which ensures constraint checks are always verified. Now it is impossible to call doEdit() to avoid this check, avoiding unexpected errors. [Refactor] Edits can now be triggered ONLY by calling PNEdit's 'executeEdit', while in the past it could be done via a ProbNet or the own PNESupport, which could bypass checking constraints. [Refactor] No longer can call announceEdit on the PNESupport in unexpected places, as now this method is package-private. [Refactor, UX] When checking for constraint violations in an edit, now multiple violations might be thrown in order to show the user every single problem with their actions, instead of having them discover them one by one. [Feature] StringFormat now works with arrays as they were lists. Multidimensional arrays are treated as single dimensional list. [Clean-Up] Removed certain code that was no longer needed after applying all the previous changes, such as the Checkable interface.